Fix NPE on docx header/footer extraction; add log viewer
DocxParser.extractHeadersFooters used List.of(...) to collect the
default/first-page/even-page header and footer variants, but
getFirstPageHeader()/getEvenPageHeader() return null whenever those
variants aren't defined — the common case for most real-world docx
files. List.of() rejects null elements, so any docx with only a
default header or footer NPE'd on scan. Switched to Arrays.asList(),
which permits nulls (the existing null-check inside the loop already
handled them correctly). Added a regression fixture + test.

Also added a log viewer (Help > View Logs...), ported from
kiro-control-panel's LogViewerDialog/LogPaths/DesktopUtils: a
non-modal, auto-refreshing view of the app's own log file. Switched
logback's FILE appender from a relative doc-scrubber.log in the
working directory to a rolling file under ~/.doc-scrubber/logs/,
matching kiro's convention and giving the viewer a stable, predictable
path to read regardless of how the app was launched.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>